--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Build
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  "0 0 */4 * *"
+    - cron:  "0 0 */8 * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,5 +25,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build Proton
-        run: bash build-proton.sh github repo=https://${{ secrets.GITHUB_TOKEN }}@github.com/KonaArctic/Valve-Proton-Binaries.git
+        run: bash build-proton.sh repo=https://${{ secrets.GITHUB_TOKEN }}@github.com/KonaArctic/Valve-Proton-Binaries.git
 
