--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Build
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  "0 0 */8 * *"
+    - cron:  "0 0 1,15 * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
